--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,29 @@
 <div id="app-3">
     <p v-if="seen">Now you seen me</p>
 </div>
+
+<div id="app-4">
+    <ol>
+        <li v-for="todo in todos">
+            {{todo.text}}
+        </li>
+    </ol>
+</div>
+
+<div id="app-5">
+    <p> {{message}}</p>
+    <button v-on:click="reverseMessage">Reverse Message</button>
+</div>
+<div id="app-6">
+    <p>{{message}}</p>
+    <input v-model="message">
+</div>
+<div id="app-7">
+    <ol>
+        <todo-item v-for="item in groceryList" v-bind:todo="item"></todo-item>
+    </ol>
+
+</div>
 </body>
 
 <script type="text/javascript" src="scripts/demo.js"></script>
